--- a/ch_6_Eigenvalues_and_Eigenvectors.ipynb
+++ b/ch_6_Eigenvalues_and_Eigenvectors.ipynb
@@ -192,7 +192,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "1-) **Trace of $S$:** The sum λ_1 + λ_2 = 3 + 1 equals the diagonal sum 2 + 2 = 4.\n",
+    "1-) **Trace of $S$:** The sum $λ_1$ + $λ_2$ = 3 + 1 equals the diagonal sum 2 + 2 = 4.\n",
     "\n",
     "2-) **Determinant:** The product $λ_1 λ_2$ = 3 * 1 = 3 equals the determinant 4- 1.\n",
     "\n",
@@ -223,18 +223,154 @@
    "id": "2bbbfadb6296f139"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "The rotation $Q$ = $\\begin{bmatrix}\n",
+    "\n",
+    "0 & -1 \\\\\n",
+    "1 & 0 \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ \n",
+    "\n",
+    "has imaginary eigenvalues $i$ and $-i$:\n",
+    "\n",
+    "$Q$ $\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-i \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ = $\\begin{bmatrix}\n",
+    "\n",
+    "0 & -1 \\\\\n",
+    "1 & 0 \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ $\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-i \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ = $(i)$ $\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-i \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ \\\n",
+    "and $Q$$\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-i \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ = $\\begin{bmatrix}\n",
+    "\n",
+    "0 & -1 \\\\\n",
+    "1 & 0 \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ $\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-i \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$ = $\n",
+    "(-i)\n",
+    "$$\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-i \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}$"
+   ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-14T15:21:34.137002300Z",
-     "start_time": "2024-04-14T15:21:34.089224800Z"
-    }
+    "collapsed": false
    },
-   "id": "85db26aee9a6c41f"
+   "id": "4e262439dea8f884"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Certainly $λ_1$ + $λ_2$ = $i - i$ agrees with the trace 0 + 0 from the main diagonal of $Q$.\n",
+    "\n",
+    "And $(λ_1)$ + $(λ_2)$ = $(i)$$(-i)$ agrees with the determinant of $Q$ = 1.\n",
+    "\n",
+    "The eigenvectors of $Q$ are still orthogonal when we move (as we should) to the dot product of complex vectors.\n",
+    "\n",
+    "**Change every $i$ in $x_1$ to $-i$.**\n",
+    "\n",
+    "This produces its conjugate $\\bar{x_1}$.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "$\\bar{x_1}$^T $x_2$ = $\\begin{bmatrix}\n",
+    "\n",
+    "1 & i \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ $\\begin{bmatrix}\n",
+    "\n",
+    "1   \\\\\n",
+    "i   \\\\\n",
+    "\\end{bmatrix}$ = $1 + i^2$ = 0 : orthogonal\\:eigenvectors.\n",
+    "\n",
+    "$$\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "76a5ce2aa54750dc"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Warning about eigenvalues and eigenvectors.**\n",
+    "\n",
+    "a-) The eigenvalues of $A$ + $B$ are not usually $λ(A)$ plus $λ(B)$.\n",
+    "\n",
+    "b-) The eigenvalues of $AB$ are not usually $λ(A)$ times $λ(B)$.\n",
+    "\n",
+    "c-) A double eigenvalue $λ_1$ = $λ_2$ might or might not have two independent eigenvectors.\n",
+    "\n",
+    "d-) The eigenvectors of a real matrix A are orthogonal if and only if $A^T A$ = $A A^T$."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a88b01e720f4e656"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The matrix $A$ also controls a system of linear differential equations $\\frac{du}{dt}$ = $Au$.\n",
+    "\n",
+    "The system starts at an initial vector $u(0)$ when $t$=0.\n",
+    "\n",
+    "Every eigenvector grows or decays or oscillates according to its own eigenvalue $λ$.\n",
+    "\n",
+    "Powers $λ^n$ are changed to exponentials $e^λ  ^t$:\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bc3bcb3f9bd9f567"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---------------------------------------------\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4a273f5068769b7b"
   }
  ],
  "metadata": {
