--- a/ch_6_Eigenvalues_and_Eigenvectors.ipynb
+++ b/ch_6_Eigenvalues_and_Eigenvectors.ipynb
@@ -365,12 +365,289 @@
    "cell_type": "markdown",
    "source": [
     "---------------------------------------------\n",
-    "\n"
+    "$$\n",
+    "\n",
+    "Starting\\:\\:Vector\\:\\:: \\:\\:\\:\\:\\: u(0) = c_1x_1 \\: + \\:...\\:+\\:c_nx_n \\\\\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Solution\\:\\:Vector\\:\\:: \\:\\:\\:\\:\\: u(t) = c_1 e^{λ_1} ^t x_1 \\: + \\:...\\:+\\:c_n e^{λ_n} ^t x_n\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "------------------------------------------"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "4a273f5068769b7b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The difference between growth and decay is now decided by Re $λ$ > 0  or Re $λ$ < 0, instead of |$λ$| > 1 or |$λ$| < 1.\n",
+    "\n",
+    "The real part of $λ$ = $a$ + $ib$ is Re $λ$ = $a$.\n",
+    "\n",
+    "The absolute value of $e^{λ t}$ is $e^{a t}$.\n",
+    "\n",
+    "The other factors $e^{i b t}$ = $cos bt$ +$i sin bt$ has $cos^2 bt$ + $sin^2 bt$ = 1.\n",
+    "\n",
+    "That part oscillates while $e^{at}$ grows or decays. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f5ed8ea7058d3a82"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## COMPUTING THE EIGENVALUES (By Hand)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4f12ef424b7bf2c0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Notice that $Ax$ = $λx$ is the same as $(A - λI)x$ = 0.\n",
+    "\n",
+    "Then $A-λI$ is not invertible: that matrix is singular.\n",
+    "\n",
+    "**The determinant of $A-λI$ must be zero!!**\n",
+    "\n",
+    "This gives an $nth$ degree equation for $λ$, and this equation $det(A -λI)=0$ has  $n$ roots.\n",
+    "\n",
+    "Here n=2 and  $A$ = $\\begin{bmatrix}\n",
+    "\n",
+    "a & b \\\\\n",
+    "c & d \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ has two eigenvalues:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "Determinant\\:of\\:A-λI\\:\n",
+    "\n",
+    "=\n",
+    "\n",
+    "$\\begin{vmatrix}\n",
+    "\n",
+    "a-λ & b \\\\\n",
+    "c & d-λ \\\\\n",
+    "\n",
+    "\\end{vmatrix}$ \n",
+    "\n",
+    "=\n",
+    "\n",
+    "λ^2 - (a+d)λ + (ad-bc) = 0\n",
+    "$$\n",
+    "\n",
+    "This quadratic equation might factor easily into $(λ-λ_1)(λ-λ_2)$.\n",
+    "\n",
+    "The quadratic formula will always give the two roots $λ_1$ and $λ_2$ of our equation from the + sign and the - sign.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "λ \n",
+    "\n",
+    "=\n",
+    "\n",
+    "\\frac{1}{2}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "a + d ± \\sqrt{(a+d)^2 - 4(ad-bc)} \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "== \\\\\n",
+    "\n",
+    "== \n",
+    "\n",
+    "\\frac{1}{2}\n",
+    "\n",
+    "*\n",
+    "\n",
+    "\\begin{bmatrix}\n",
+    "\n",
+    "a + d ± \\sqrt{(a-d)^2 + 4bc} \\\\\n",
+    "\n",
+    "\n",
+    "\\end{bmatrix}\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "You see that $λ_1$ + $λ_2$ equals $a + d$ (the trace of the matrix.\n",
+    "\n",
+    "The ± square roots cancel out.\n",
+    "\n",
+    "Notice also that eigenvalues are real when A is symmetric $(b=c)$.\n",
+    "\n",
+    "Then we are not taking the square root of a negative number to find $λ$.\n",
+    "\n",
+    "When $bc$ is very negative, the eigenvalues and eigenvectors go complex."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "aa45e3af8b9bb6aa"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## EXAMPLE 3"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "964040a92b3b82b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Find the eigenvalues and eigenvectors of $A$ = $\\begin{bmatrix}\n",
+    "\n",
+    "8 & 3 \\\\\n",
+    "2 & 7 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ : **not symmetric.** \n",
+    "\n",
+    "The determinant of $A - λI$ is $\\begin{vmatrix}\n",
+    "\n",
+    "8-λ & 3 \\\\\n",
+    "2 & 7-λ \\\\\n",
+    "\n",
+    "\\end{vmatrix}$ = $λ^2$ - $15λ$ + $50$ \\= $(λ-10)$ $(λ-5)$   \n",
+    "\n",
+    "$λ_1$ = 10 has $\\begin{bmatrix}\n",
+    "\n",
+    "8-10 & 3 \\\\\n",
+    "2 & 7-10 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ $\\begin{bmatrix}\n",
+    "\n",
+    "x_1 \\\\\n",
+    "x_2 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ = $\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ **Eigenvector $x_1$** = $\\begin{bmatrix}\n",
+    "\n",
+    "x_1 \\\\\n",
+    "x_2 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ = $\\begin{bmatrix}\n",
+    "\n",
+    "3 \\\\\n",
+    "2 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "\n",
+    "$λ_1$ = 5 has $\\begin{bmatrix}\n",
+    "\n",
+    "8-5 & 3 \\\\\n",
+    "2 & 7-5 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ $\\begin{bmatrix}\n",
+    "\n",
+    "x_1 \\\\\n",
+    "x_2 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ = $\\begin{bmatrix}\n",
+    "\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ **Eigenvector $x_1$** = $\\begin{bmatrix}\n",
+    "\n",
+    "x_1 \\\\\n",
+    "x_2 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$ = $\\begin{bmatrix}\n",
+    "\n",
+    "1 \\\\\n",
+    "-1 \\\\\n",
+    "\n",
+    "\\end{bmatrix}$\n",
+    "\n",
+    "\n",
+    "10+5 = 8+7.\n",
+    "\n",
+    "These eigenvectors are not orthogonal.\n",
+    "\n",
+    "Increase 3 to 30 for complex $λ$'s.\n",
+    "\n",
+    "**QUESTION:**\n",
+    "\n",
+    "If A is shifted to $A + sI$, what happens to the $x$'s and $λ$'s??\n",
+    "\n",
+    "**ANSWER:**\n",
+    "\n",
+    "The eigenvectors $x$ stay the same. Every eigenvalue $λ$ shifts by the number $s$:\n",
+    "\n",
+    "-----------------------------------------\n",
+    "\n",
+    "Shift in A ==> Shift in every $λ$.\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "(A+sI)x = λx + sx = (λ+s)x\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "-------------------------------\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cb939ca2a2466738"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## SIMILAR MATRICES"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42d8e3d402b607a5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For every invertible matrix B, the eigenvalues of $BAB^1$ are the same as the eigenvalues of A.\n",
+    "\n",
+    "The eigenvectors $x$ of A are multiple by $B$ to give eigenvectors $Bx$ of $BAB^1$"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "46f9c16c39730cc3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1a4c604a3a2d7724"
   }
  ],
  "metadata": {
