--- a/ch_6_Eigenvalues_and_Eigenvectors.ipynb
+++ b/ch_6_Eigenvalues_and_Eigenvectors.ipynb
@@ -630,9 +630,37 @@
   {
    "cell_type": "markdown",
    "source": [
-    "For every invertible matrix B, the eigenvalues of $BAB^1$ are the same as the eigenvalues of A.\n",
+    "## SIMILAR MATRICES\n",
     "\n",
-    "The eigenvectors $x$ of A are multiple by $B$ to give eigenvectors $Bx$ of $BAB^1$"
+    "For every invertible matrix B, the eigenvalues of $BAB^-^1$ are the same as the eigenvalues of A.\n",
+    "\n",
+    "The eigenvectors $x$ of A are multiple by $B$ to give eigenvectors $Bx$ of $BAB^-^1$:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "If\\:Ax\\:= \\:λx\\:\\:then\\:\\:(BAB^-^1)(Bx)\\: =\\: BAx\\: =\\: Bλx\\:=\\:λ(Bx)\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "The matrices $BAB^-^1$ (for every invertible B) are similar to A: **SAME EIGENVALUES**\n",
+    "\n",
+    "We use this idea to compute eigenvalues of large matrices (when the determinant of $A - λI$ would be completely hopeless).\n",
+    "\n",
+    "The idea is to make $BAB^-^1$ gradually into a triangular matrix.\n",
+    "\n",
+    "The eigenvalues are not changing and they gradually show up on the main diagonal of $BAB^-^1$:\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "The\\:eigenvalues\\:of\\:any\\:triangular\\:matrix\\:\\begin{bmatrix}\n",
+    "\n",
+    "a & b \\\\\n",
+    "0 & d \\\\\n",
+    "\n",
+    "\\end{bmatrix}\\:are\\:λ_1=a\\:and\\:λ_2=d.\n",
+    "\n",
+    "\n",
+    "$$"
    ],
    "metadata": {
     "collapsed": false
@@ -645,7 +673,11 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-27T09:49:05.121283200Z",
+     "start_time": "2024-04-27T09:49:05.090031400Z"
+    }
    },
    "id": "1a4c604a3a2d7724"
   }
